Add base CREATE TABLE